--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,8 @@ CMakeFiles/TargetDirectories.txt
 *.ilk
 CMakeFiles/1965a11616015a994507837bb167b874/ALL_BUILD.rule
 CMakeFiles/1965a11616015a994507837bb167b874/ZERO_CHECK.rule
+CMakeFiles/2.8.12.2/CMakeCXXCompiler.cmake
+CMakeFiles/generate.stamp.list
+OpenDDL-Parser.sdf
+OpenDDL-Parser.opensdf
+cmake_install.cmake
