- separate parser utils and common stuff from base parser classes. - add utils for detecting character and string literal token. - add property parser for integer literals.
Signed-off-by: Kim Kulling <kim.kulling@googlemail.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -45,6 +45,8 @@ endif()
 SET ( openddl_parser_src
     code/OpenDDLParser.cpp
     include/openddlparser/OpenDDLParser.h
+    include/openddlparser/OpenDDLParserUtils.h
+    include/openddlparser/OpenDDLCommon.h
 )
  
 SOURCE_GROUP( code            FILES ${openddl_parser_src} )
