- fix findings from static code analysis. - disable compiler tests for win32.
Signed-off-by: Kim Kulling <kim.kulling@googlemail.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,6 +8,8 @@ SET ( PROJECT_VERSION "${OPENDDL_PARSER_VERSION}" )
 
 if( CMAKE_COMPILER_IS_GNUCC OR CMAKE_COMPILER_IS_GNUCXX )
     find_package(Threads)
+else()
+    add_definitions( -D_CRT_SECURE_NO_WARNINGS )
 endif()
 
 add_definitions( -DOPENDDLPARSER_BUILD )
