- segregate integration tests and unit tests. - add push / pop API for current scope for DDLNodes in parser.
Signed-off-by: Kim Kulling <kim.kulling@googlemail.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -72,7 +72,8 @@ SET ( gtest_src
 )
 
 SET( openddl_parser_unittest_src  
-    test/OpenDDLParserTest.cpp 
+    test/OpenDDLParserTest.cpp
+    test/OpenDDLIntegrationTest.cpp
 )
 SOURCE_GROUP( code            FILES ${openddl_parser_unittest_src} )
 
