add new temp file to gitignore.
Signed-off-by: Kim Kulling <kim.kulling@googlemail.com>

--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,4 @@ OpenDDL-Parser.opensdf
 cmake_install.cmake
 openddl_parser_demo.vcxproj.user
 CMakeFiles/3.1.0/
+openddl_parser_unittest.vcxproj.user
