fix: https://github.com/kimkulling/openddl-parser/issues/11 release references in ddlnode instances: ownership will be managed by the nodes.
Signed-off-by: Kim Kulling <kim.kulling@googlemail.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -80,11 +80,13 @@ SET ( gtest_src
 SET( openddl_parser_unittest_src  
     test/UnitTestCommon.h
     test/DDLNodeTest.cpp
+    test/OpenDDLCommonTest.cpp
     test/OpenDDLParserTest.cpp
     test/OpenDDLParserUtilsTest.cpp
     test/OpenDDLIntegrationTest.cpp
     test/ValueTest.cpp
 )
+
 SOURCE_GROUP( code  FILES ${openddl_parser_unittest_src} )
 SOURCE_GROUP( gtest FILES ${gtest_src} )
 
