--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,8 @@ compiler:
 script: 
     - cmake -DDDL_CHECK_CODE_COVERAGE=$CHECK_CODE_COVERAGE -G "Unix Makefiles" ;
       make ;
+      ls ;
+      ls bin;
       cd bin ;
       chmod 755 openddl_parser_unittest ;
       ./openddl_parser_unittest ;
