--- a/doc/openddlparser_doc.cfg
+++ b/doc/openddlparser_doc.cfg
@@ -758,7 +758,8 @@ WARN_LOGFILE           =
 # spaces.
 # Note: If this tag is empty the current directory is searched.
 
-INPUT                  = ../include/openddlparser
+INPUT                  = ./ \
+                         ../include/openddlparser
 
 # This tag can be used to specify the character encoding of the source files
 # that doxygen parses. Internally doxygen uses the UTF-8 encoding. Doxygen uses
@@ -778,7 +779,8 @@ INPUT_ENCODING         = UTF-8
 # *.md, *.mm, *.dox, *.py, *.f90, *.f, *.for, *.tcl, *.vhd, *.vhdl, *.ucf,
 # *.qsf, *.as and *.js.
 
-FILE_PATTERNS          = *h \
+FILE_PATTERNS          = *dox \
+                         *h \
                          *cpp
 
 # The RECURSIVE tag can be used to specify whether or not subdirectories should
