DataStructures: move definition of data code to cpp file to avoid compiler warnings caused by forward declarations.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -53,6 +53,7 @@ endif()
 
 SET ( openddl_parser_src
     code/OpenDDLParser.cpp
+    code/OpenDDLCommon.cpp
     code/DDLNode.cpp
     code/Value.cpp
     include/openddlparser/OpenDDLParser.h
