--- a/.travis.yml
+++ b/.travis.yml
@@ -8,13 +8,14 @@ env:
   matrix:
       - CHECK_CODE_COVERAGE=ON
       - CHECK_CODE_COVERAGE=OFF
-      - CPP11=-DOPENDDL_NO_USE_CPP
+      - CHECK_USE_CPP11=ON
+      - CHECK_USE_CPP11=OFF
 language: cpp
 compiler:
   - gcc
   - clang
 script: 
-    - cmake -DDDL_CHECK_CODE_COVERAGE=$CHECK_CODE_COVERAGE $CPP11 -G "Unix Makefiles" ;
+    - cmake -DDDL_CHECK_CODE_COVERAGE=$CHECK_CODE_COVERAGE -DDDL_USE_CPP11=$CHECK_USE_CPP11 -G "Unix Makefiles" ;
       make ;
       ls ;
       cd bin ;
