--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,14 +12,12 @@ option( DDL_DEBUG_OUTPUT        "Set to ON to use output debug texts" OFF )
 option( DDL_STATIC_LIBRARY		"Set to ON to build static libary of OpenDDL Parser." ON)
 
 if ( DDL_USE_CPP11 )
-    MESSAGE( "huhu")
     if( CMAKE_COMPILER_IS_GNUCC OR CMAKE_COMPILER_IS_GNUCXX )
         set( OPENDDL_CXXFLAGS -std=c++0x )
     elseif ( "${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang" )
-        set( OPENDDL_CXXFLAGS --std=c++11 )
+        set( OPENDDL_CXXFLAGS --std=c++11 -Wvariadic-macros )
     endif()
 else( DDL_USE_CPP11 )
-    MESSAGE( "haha")
     add_definitions( -DOPENDDL_NO_USE_CPP11 )
 endif( DDL_USE_CPP11)
 
