--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,8 @@ compiler:
   - gcc
   - clang
 script:
+    - export COVERALLS_SERVICE_NAME=travis-ci
+    - export COVERALLS_REPO_TOKEN=abc12345
     - cmake -DCOVERALLS=$ENABLE_COVERALLS -DDDL_USE_CPP11=$CHECK_USE_CPP11 -G "Unix Makefiles" ;
       make ;
       ls ;
