--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,6 @@
+before_install:
+  - pip install --user cpp-coveralls
+
 install:
   - sudo apt-get install cmake
 #  - sudo apt-get install doxygen
@@ -23,3 +26,6 @@ script:
       cd bin ;
       chmod 755 openddl_parser_unittest ;
       ./openddl_parser_unittest ;
+      
+after_success:
+  - coveralls --exclude lib --exclude tests --gcov-options '\-lp'
