--- a/.travis.yml
+++ b/.travis.yml
@@ -26,6 +26,7 @@ script:
       cd bin ;
       chmod 755 openddl_parser_unittest ;
       ./openddl_parser_unittest ;
+      make coveralls ;
       
 after_success:
   - coveralls --exclude lib --exclude tests --gcov-options '\-lp'
