--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,15 @@ before_install:
 
 install:
   - sudo apt-get install cmake
-#  - sudo apt-get install doxygen
+  # install latest LCOV (1.9 was failing)
+  - cd ${TRAVIS_BUILD_DIR}
+  - wget http://ftp.de.debian.org/debian/pool/main/l/lcov/lcov_1.11.orig.tar.gz
+  - tar xf lcov_1.11.orig.tar.gz
+  - sudo make -C lcov-1.11/ install
+  - gem install coveralls-lcov
+  - lcov --version
+  - g++ --version
+  #  - sudo apt-get install doxygen
 env:
   global:
     - TRAVIS_NO_EXPORT=YES
@@ -34,8 +42,8 @@ script:
       ./openddl_parser_unittest ;
       
 after_success:
-- cd ${TRAVIS_BUILD_DIR}
-- lcov --directory . --capture --output-file coverage.info
-- lcov --remove coverage.info 'tests/*' '/usr/*' --output-file coverage.info
-- lcov --list coverage.info
-- coveralls-lcov --repo-token ${COVERALLS_TOKEN} coverage.info
+  - cd ${TRAVIS_BUILD_DIR}
+  - lcov --directory . --capture --output-file coverage.info
+  - lcov --remove coverage.info 'tests/*' '/usr/*' --output-file coverage.info
+  - lcov --list coverage.info
+  - coveralls-lcov --repo-token ${COVERALLS_TOKEN} coverage.info
