--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ install:
   - gem install coveralls-lcov
   - lcov --version
   - g++ --version
-  #  - sudo apt-get install doxygen
+  - sudo apt-get install doxygen
 env:
   global:
     - TRAVIS_NO_EXPORT=YES
