closes https://github.com/kimkulling/openddl-parser/issues/51: fix crash

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -134,6 +134,7 @@ SET( openddl_parser_unittest_src
     test/OpenDDLIntegrationTest.cpp
     test/ValueTest.cpp
     test/OpenDDLDefectsTest.cpp
+	test/OssFuzzTest.cpp
 )
 
 SOURCE_GROUP( code  FILES ${openddl_parser_unittest_src} )
